enterprise-chaos-hub/faults/kubernetes/pod-api-modify-body/k8s-fault.yaml
---
apiVersion: litmuschaos.io/v1alpha1
kind: K8sFault
metadata:
  name: pod-api-modify-body
spec:
  definition:
    targets:
      appinfo:
        applabel: ""
        appkind: ""
        appns: ""
    chaos:
      experiment: pod-api-modify-body
      serviceAccountName: litmus-admin
      image: artifactory.sdlc.ctl.gcp.db.com/dkr-public-local/dkr-io/harness/chaos-ddcr-faults:1.54.0
      imagePullPolicy: Always
      env:
        - name: TOTAL_CHAOS_DURATION
          value: "60" # in seconds

        # provide the body string to overwrite the response body
        - name: RESPONSE_BODY
          value: ''

        # port of the target service
        - name: TARGET_SERVICE_PORT
          value: "80"

        # port on which the proxy will listen
        - name: PROXY_PORT
          value: "20000"

        # network interface on which the proxy will listen
        - name: NETWORK_INTERFACE
          value: "eth0"

        # api path filter
        - name: PATH_FILTER
          value: ''

        # percentage of total requests to be affected
        - name: TRANSACTION_PERCENTAGE
          value: ""

        # http headers filter
        - name: HEADERS_FILTERS
          value: ''

        # http methods filter
        - name: METHODS
          value: ''

        # query params filter
        - name: QUERY_PARAMS
          value: ''

        # source hosts filter for ingress traffic
        - name: SOURCE_HOSTS
          value: ''

        # source ips filter for ingress traffic
        - name: SOURCE_IPS
          value: ''

        # destination hosts filter for egress traffic
        - name: DESTINATION_HOSTS
          value: ''

        # destination ips filter for egress traffic
        - name: DESTINATION_IPS
          value: ''

        - name: SERVICE_DIRECTION
          value: 'ingress'

        - name: DATA_DIRECTION
          value: 'both'

        # enable the https for ingress and egress traffic
        - name: HTTPS_ENABLED
          value: ''

        # provide the base64 encoded ca.key and ca.crt certificates
        - name: CA_CERTIFICATES
          value: ''

        # provide the base64 encoded server.key and server.crt certificates
        - name: SERVER_CERTIFICATES
          value: ''

        # comma seperated destination ports
        - name: DESTINATION_PORTS
          value: ''

        ## Percentage of total pods to target
        - name: POD_AFFECTED_PERCENTAGE
          value: ""

        ## provide the cluster runtime
        - name: CONTAINER_RUNTIME
          value: "containerd"

        # provide the socket file path
        - name: SOCKET_PATH
          value: "/run/containerd/containerd.sock"

        - name: LIB_IMAGE
          value: artifactory.sdlc.ctl.gcp.db.com/dkr-public-local/dkr-io/harness/chaos-ddcr-faults:1.54.0

        ## Period to wait before and after injection of chaos in sec
        - name: RAMP_TIME
          value: ""

        - name: TARGET_CONTAINER
          value: ""

        - name: TARGET_PODS
          value: ""

        # To select pods on specific node(s)
        - name: NODE_LABEL
          value: ""

        ## it defines the sequence of chaos execution for multiple target pods
        ## supported values: serial, parallel
        - name: SEQUENCE
          value: "parallel"
